Broken UI after creating new file in 2.79 test and daily builds #51889

Closed
opened 2017-06-24 14:43:54 +02:00 by Roman Kiselevich · 24 comments

System Information
Windows 10x64 Home Ru Version 1607 Build 14393.639 + latest autoupdates
NVIDIA GeForce GTX 970 with 378.66 NVIDIA drivers (latest)
Intel Core i7-4790K
system-info.txt

Blender Version
Broken:
2.79 testbuild x64 e0bc5b5
2.79 daily build x64 c2d285f
Worked:
2.78c x64 e92f235283

Short description of error
Creating new file leads to UI bug:

  1. all windows titles becomes hidden
  2. outliner windows scale is changed
    UI can be fixed by main window resizing.
    Bug.gif

Exact steps for others to reproduce the error
Create new file by "File / New" menu command.

**System Information** Windows 10x64 Home Ru Version 1607 Build 14393.639 + latest autoupdates NVIDIA GeForce GTX 970 with 378.66 NVIDIA drivers (latest) Intel Core i7-4790K [system-info.txt](https://archive.blender.org/developer/F641214/system-info.txt) **Blender Version** Broken: 2.79 testbuild x64 e0bc5b5 2.79 daily build x64 c2d285f Worked: 2.78c x64 e92f235283 **Short description of error** Creating new file leads to UI bug: 1. all windows titles becomes hidden 2. outliner windows scale is changed UI can be fixed by main window resizing. ![Bug.gif](https://archive.blender.org/developer/F641224/Bug.gif) **Exact steps for others to reproduce the error** Create new file by "File / New" menu command.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @RKiselevich

Added subscriber: @RKiselevich

#51981 was marked as duplicate of this issue

#51981 was marked as duplicate of this issue

Added subscriber: @VukGardasevic

Added subscriber: @VukGardasevic

I can recreate the issue on Win7 build ed6d88f by renaming the userpref.blend file in the config folder so Blender cannot load it.
Parts of the UI will be blank until the window is resized with both loading the Default Template and a New File.

In this case, it is possible that the userpref blend is missing or that is somehow got corrupted / incompatible with the current builds.

I can recreate the issue on Win7 build `ed6d88f` by renaming the *userpref.blend* file in the config folder so Blender cannot load it. Parts of the UI will be blank until the window is resized with both loading the Default Template and a New File. In this case, it is possible that the userpref blend is missing or that is somehow got corrupted / incompatible with the current builds.

Added subscriber: @bliblubli

Added subscriber: @bliblubli

I can also confirm the bug.

I can also confirm the bug.
Member

Added subscribers: @Waterflames, @LazyDodo

Added subscribers: @Waterflames, @LazyDodo
Member

bisected it to fe3fb23697 / D2539 , @Waterflames any ideas here?

bisected it to fe3fb23697 / [D2539](https://archive.blender.org/developer/D2539) , @Waterflames any ideas here?

This issue was referenced by 46c7d45f77

This issue was referenced by 46c7d45f7748f70c677fb892255beabc10f3cac2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

I've committed a fix which solves the case described by @VukGardasevic on macOS, when there is no userpref.blend.

Can someone confirm if this solves the bug on Windows? It's not clear to me if it only happens without a userpref.blend or if there's another issue.

I've committed a fix which solves the case described by @VukGardasevic on macOS, when there is no userpref.blend. Can someone confirm if this solves the bug on Windows? It's not clear to me if it only happens without a userpref.blend or if there's another issue.
Member

tested on windows with a missing userpref.blend , problem is solved,

tested on windows with a missing userpref.blend , problem is solved,

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2017-07-03 04:12:12 +02:00

Thanks, I'll consider it fixed then.

Thanks, I'll consider it fixed then.

Added subscriber: @soderlind

Added subscriber: @soderlind

This task probably needs to be reopened because I tried the latest build today (blender-2.78-fee7f68-win64) and still see the same behavior when userpref.blend is not present. (Using windows 7 64-bit)

Also no matter if userpref.blend is there or not, the menu command "File -> Load Factory Settings" always show the same error as shown in original reporters attached gif.

Is it possible that when userpref.blend is not present "File -> New" reverts to loading factory settings which is broken somehow.

This task probably needs to be reopened because I tried the latest build today (blender-2.78-fee7f68-win64) and still see the same behavior when userpref.blend is not present. (Using windows 7 64-bit) Also no matter if userpref.blend is there or not, the menu command "File -> Load Factory Settings" always show the same error as shown in original reporters attached gif. Is it possible that when userpref.blend is not present "File -> New" reverts to loading factory settings which is broken somehow.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

I can confirm the bug is still there on windows. Two cases: user pref is there and only "load factory settings" will mess up. Or there is no userpref and then file->new and "load factory settings" will messup the UI.

I can confirm the bug is still there on windows. Two cases: user pref is there and only "load factory settings" will mess up. Or there is no userpref and then file->new and "load factory settings" will messup the UI.

I can also confirm "File -> Load Factory Settings" breaks the UI.
Interestingly, it seems resizing the window or causing a DPI change event or even moving the window restores the UI to the correct state.

I can also confirm "File -> Load Factory Settings" breaks the UI. Interestingly, it seems resizing the window or causing a DPI change event or even moving the window restores the UI to the correct state.

This issue was referenced by 7dc3ad2287

This issue was referenced by 7dc3ad22873e08de11172757066bb2b3a27f7203

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51889
No description provided.